<resources>
    <string name="app_name" translatable="false">ShopApp</string>
    <string name="shop_app" translatable="false">Shop App</string>
    <string name="cart">Cart</string>
    <string name="filters">Filters</string>
    <string name="category">Category</string>
    <string name="smartphone">Smartphone</string>
    <string name="tablet">Tablet</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="samsung">Samsung</string>
    <string name="xiaomi">Xiaomi</string>
    <string name="huawei">Huawei</string>
    <string name="nokia">Nokia</string>
    <string name="sort">Sort</string>
    <string name="samsung_galaxy_s23_ultra_gray">Samsung Galaxy S23 Ultra Gray</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logout">Logout</string>
    <string name="products">Products</string>
    <string name="new_product">New product</string>
    <string name="profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="language">Language</string>
</resources>